--- a/JiraLogWork/Views/ProjectView.xaml
+++ b/JiraLogWork/Views/ProjectView.xaml
@@ -2,17 +2,20 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+             xmlns:cb="clr-namespace:JiraLogWork.Extensions"
              xmlns:local="clr-namespace:JiraLogWork.Views"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Border BorderBrush="Blue" BorderThickness="0.5">
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
             </Grid.RowDefinitions>
 
-            <Border BorderBrush="Blue" BorderThickness="0.5">
+            <Border Grid.Row="0" BorderBrush="Blue" BorderThickness="0.5">
                 <Grid Grid.Row="0" Width="240">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"></RowDefinition>
@@ -26,7 +29,33 @@
                               SelectedValuePath="Value"
                               SelectedValue="{Binding SelectedBoard }"
                               Margin="30 0">
-                        
+                        <i:Interaction.Triggers>
+                            <i:EventTrigger EventName="SelectionChanged">
+                                <i:InvokeCommandAction Command="{Binding Boards_Changed}"></i:InvokeCommandAction>
+                            </i:EventTrigger>
+                        </i:Interaction.Triggers>
+                    </ComboBox>
+                </Grid>
+            </Border>
+            <Border Grid.Row="1" BorderBrush="Blue" BorderThickness="0.5">
+                <Grid Grid.Row="0" Width="240">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+
+                    </Grid.RowDefinitions>
+                    <Label Grid.Row="0" HorizontalContentAlignment="Center">Sprints</Label>
+                    <ComboBox Grid.Row="1" 
+                              ItemsSource="{ Binding Sprints}"
+                              DisplayMemberPath="Name"
+                              SelectedValuePath="Value"
+                              SelectedValue="{Binding SelectedSprint }"
+                              Margin="30 0">
+                        <i:Interaction.Triggers>
+                            <i:EventTrigger EventName="SelectionChanged">
+                                <i:InvokeCommandAction Command="{Binding Sprints_Changed}"></i:InvokeCommandAction>
+                            </i:EventTrigger>
+                        </i:Interaction.Triggers>
                     </ComboBox>
                 </Grid>
             </Border>
