--- a/JiraLogWork/Views/ProjectView.xaml
+++ b/JiraLogWork/Views/ProjectView.xaml
@@ -14,51 +14,89 @@
                 <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition Height="Auto"></RowDefinition>
             </Grid.RowDefinitions>
+            <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                </Grid.RowDefinitions>
 
-            <Border Grid.Row="0" BorderBrush="Blue" BorderThickness="0.5">
-                <Grid Grid.Row="0" Width="240">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"></RowDefinition>
-                        <RowDefinition Height="Auto"></RowDefinition>
+                <Border Grid.Row="0" Grid.Column="0" BorderBrush="Blue" BorderThickness="0.5">
+                    <Grid Grid.Row="0" Width="170">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
 
-                    </Grid.RowDefinitions>
-                    <Label Grid.Row="0" HorizontalContentAlignment="Center">Board</Label>
-                    <ComboBox Grid.Row="1" 
+                        </Grid.RowDefinitions>
+                        <Label Grid.Row="0" HorizontalContentAlignment="Center">Board</Label>
+                        <ComboBox Grid.Row="1" 
                               ItemsSource="{ Binding Boards}"
                               DisplayMemberPath="Name"
                               SelectedValuePath="Value"
                               SelectedValue="{Binding SelectedBoard }"
                               Margin="30 0">
-                        <i:Interaction.Triggers>
-                            <i:EventTrigger EventName="SelectionChanged">
-                                <i:InvokeCommandAction Command="{Binding Boards_Changed}"></i:InvokeCommandAction>
-                            </i:EventTrigger>
-                        </i:Interaction.Triggers>
-                    </ComboBox>
-                </Grid>
-            </Border>
-            <Border Grid.Row="1" BorderBrush="Blue" BorderThickness="0.5">
-                <Grid Grid.Row="0" Width="240">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"></RowDefinition>
-                        <RowDefinition Height="Auto"></RowDefinition>
+                            <i:Interaction.Triggers>
+                                <i:EventTrigger EventName="SelectionChanged">
+                                    <i:InvokeCommandAction Command="{Binding Boards_Changed}"></i:InvokeCommandAction>
+                                </i:EventTrigger>
+                            </i:Interaction.Triggers>
+                        </ComboBox>
+                    </Grid>
+                </Border>
+                <Border Grid.Row="0" Grid.Column="1" BorderBrush="Blue" BorderThickness="0.5">
+                    <Grid Grid.Row="0" Width="170">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
 
-                    </Grid.RowDefinitions>
-                    <Label Grid.Row="0" HorizontalContentAlignment="Center">Sprints</Label>
-                    <ComboBox Grid.Row="1" 
+                        </Grid.RowDefinitions>
+                        <Label Grid.Row="0" HorizontalContentAlignment="Center">Sprints</Label>
+                        <ComboBox Grid.Row="1" 
                               ItemsSource="{ Binding Sprints}"
                               DisplayMemberPath="Name"
                               SelectedValuePath="Value"
                               SelectedValue="{Binding SelectedSprint }"
                               Margin="30 0">
-                        <i:Interaction.Triggers>
-                            <i:EventTrigger EventName="SelectionChanged">
-                                <i:InvokeCommandAction Command="{Binding Sprints_Changed}"></i:InvokeCommandAction>
-                            </i:EventTrigger>
-                        </i:Interaction.Triggers>
-                    </ComboBox>
-                </Grid>
-            </Border>
+                            <i:Interaction.Triggers>
+                                <i:EventTrigger EventName="SelectionChanged">
+                                    <i:InvokeCommandAction Command="{Binding Sprints_Changed}"></i:InvokeCommandAction>
+                                </i:EventTrigger>
+                            </i:Interaction.Triggers>
+                        </ComboBox>
+                    </Grid>
+                </Border>
+                <Border Grid.Row="0" Grid.Column="2" BorderBrush="Blue" BorderThickness="0.5">
+                    <Grid Grid.Row="0" Width="170">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                        </Grid.RowDefinitions>
+                        <Label Grid.Row="0" HorizontalContentAlignment="Center">Issues</Label>
+                        <ComboBox Grid.Row="1" 
+                              ItemsSource="{ Binding Issues}"
+                              DisplayMemberPath="Name"
+                              SelectedValuePath="Value"
+                              SelectedValue="{Binding SelectedIssue }"
+                              Margin="30 0">
+                        </ComboBox>
+                    </Grid>
+                </Border>
+            </Grid>
+            <Grid Grid.Row="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                </Grid.RowDefinitions>
+                <Border Grid.Row="0" BorderBrush="Blue" BorderThickness="0.5" Margin="0 10 0 0">
+                    <TextBlock Text="{Binding TimeElapsed}" HorizontalAlignment="Center" FontSize="20"></TextBlock>
+                </Border>
+                <Border Grid.Row="1" BorderBrush="Blue" BorderThickness="0.5" Margin="0 10 0 0">
+                    
+                </Border>
+            </Grid>
         </Grid>
     </Border>
 </UserControl>
