--- a/JiraLogWork/Views/ProjectView.xaml
+++ b/JiraLogWork/Views/ProjectView.xaml
@@ -6,6 +6,7 @@
              xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              xmlns:cb="clr-namespace:JiraLogWork.Extensions"
              xmlns:local="clr-namespace:JiraLogWork.Views"
+             xmlns:sys="clr-namespace:System;assembly=mscorlib"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Border BorderBrush="Blue" BorderThickness="0.5">
@@ -176,20 +177,28 @@
                     </Grid>
                 </Border>
                 <Border Grid.Row="2" BorderBrush="Blue" BorderThickness="0.5" Margin="0 10 0 0">
-                    <Grid>
+                    <Grid HorizontalAlignment="Center">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"></ColumnDefinition>
                             <ColumnDefinition Width="*"></ColumnDefinition>
-                            <ColumnDefinition Width="*"></ColumnDefinition>
-                            <ColumnDefinition Width="*"></ColumnDefinition>
                         </Grid.ColumnDefinitions>
-                        
-                        <DatePicker Grid.Column="0">
-                            
-                        </DatePicker>
-                        <TextBox Grid.Column="1"></TextBox>
-                        <TextBox Grid.Column="2" Text="{Binding TimeElapsed}"></TextBox>
-                        <Button Grid.Column="3" Content="Log Work"></Button>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                        </Grid.RowDefinitions>
+
+                        <Label HorizontalAlignment="Center" Grid.Row="0" Grid.Column="0">Date</Label>
+                        <DatePicker Grid.Row="1" Grid.Column="0" SelectedDate="{x:Static sys:DateTime.Now}" Width="Auto"></DatePicker>
+
+                        <Label HorizontalAlignment="Center" Grid.Row="0" Grid.Column="1">Time</Label>
+                        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding TimeElapsed}" Width="Auto" Margin="20 0 0 0"></TextBox>
+                        <Label HorizontalAlignment="Center" Grid.Row="2" Grid.ColumnSpan="2" Margin="0 10 0 0">Message</Label>
+                        <TextBox Grid.Row="3" Grid.ColumnSpan="2"></TextBox>
+
+                        <Button Grid.Row="4" Grid.Column="1" Content="Log Work" Width="Auto" Margin="0 10 0 0"></Button>
                     </Grid>
                 </Border>
             </Grid>
