--- a/JiraLogWork/Views/ProjectView.xaml
+++ b/JiraLogWork/Views/ProjectView.xaml
@@ -88,129 +88,133 @@
                     </Grid>
                 </Border>
             </Grid>
-            <!--<Grid Grid.Row="1">
-                <TabControl>
-                    
-                </TabControl>
-            </Grid>-->
             <Grid Grid.Row="1">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                </Grid.RowDefinitions>
-                <Border Grid.Row="0" BorderBrush="Blue" BorderThickness="0.5" Margin="0 10 0 0">
-                    <TextBlock Text="{Binding TimeElapsed}" HorizontalAlignment="Center" FontSize="30"></TextBlock>
-                </Border>
-                <Border Grid.Row="1" BorderBrush="Blue" BorderThickness="0.5" Margin="0 10 0 0">
-                    <Grid HorizontalAlignment="Center">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto"></ColumnDefinition>
-                            <ColumnDefinition Width="Auto"></ColumnDefinition>
-                            <ColumnDefinition Width="Auto"></ColumnDefinition>
-                        </Grid.ColumnDefinitions>
-                        <Grid.Resources>
-                            <ImageBrush x:Key="PlayButton" ImageSource="/Resources/Images/PlayButton_Normal.png"></ImageBrush>
-                            <ImageBrush x:Key="PlayButton_Hover" ImageSource="/Resources/Images/PlayButton_Hover.png"></ImageBrush>
-                            <ImageBrush x:Key="StopButton" ImageSource="/Resources/Images/StopButton_Normal.png"></ImageBrush>
-                            <ImageBrush x:Key="StopButton_Hover" ImageSource="/Resources/Images/StopButton_Hover.png"></ImageBrush>
-                            <ImageBrush x:Key="ResetButton" ImageSource="/Resources/Images/ResetButton_Normal.png"></ImageBrush>
-                            <ImageBrush x:Key="ResetButton_Hover" ImageSource="/Resources/Images/ResetButton_Hover.png"></ImageBrush>
+                <TabControl HorizontalAlignment="Center">
+                    <TabItem Header="Log Work" IsSelected="True">
+                        <Grid Grid.Row="2">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"></RowDefinition>
+                                <RowDefinition Height="Auto"></RowDefinition>
+                                <RowDefinition Height="Auto"></RowDefinition>
+                            </Grid.RowDefinitions>
+                            <Border Grid.Row="0" BorderBrush="Blue" BorderThickness="0.5" Margin="0 10 0 0">
+                                <TextBlock Text="{Binding TimeElapsed}" HorizontalAlignment="Center" FontSize="30"></TextBlock>
+                            </Border>
+                            <Border Grid.Row="1" BorderBrush="Blue" BorderThickness="0.5" Margin="0 10 0 0">
+                                <Grid HorizontalAlignment="Center">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"></ColumnDefinition>
+                                        <ColumnDefinition Width="Auto"></ColumnDefinition>
+                                        <ColumnDefinition Width="Auto"></ColumnDefinition>
+                                    </Grid.ColumnDefinitions>
+                                    <Grid.Resources>
+                                        <ImageBrush x:Key="PlayButton" ImageSource="/Resources/Images/PlayButton_Normal.png"></ImageBrush>
+                                        <ImageBrush x:Key="PlayButton_Hover" ImageSource="/Resources/Images/PlayButton_Hover.png"></ImageBrush>
+                                        <ImageBrush x:Key="StopButton" ImageSource="/Resources/Images/StopButton_Normal.png"></ImageBrush>
+                                        <ImageBrush x:Key="StopButton_Hover" ImageSource="/Resources/Images/StopButton_Hover.png"></ImageBrush>
+                                        <ImageBrush x:Key="ResetButton" ImageSource="/Resources/Images/ResetButton_Normal.png"></ImageBrush>
+                                        <ImageBrush x:Key="ResetButton_Hover" ImageSource="/Resources/Images/ResetButton_Hover.png"></ImageBrush>
 
-                            <Style x:Key="PlayButtonStyles" TargetType="{x:Type Button}">
-                                <Setter Property="Width" Value="32"></Setter>
-                                <Setter Property="Height" Value="32"></Setter>
-                                <Setter Property="Background" Value="{StaticResource PlayButton}"/>
-                                <Setter Property="Template">
-                                    <Setter.Value>
-                                        <ControlTemplate TargetType="{x:Type Button}">
-                                            <Border Background="{TemplateBinding Background}">
-                                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                                            </Border>
-                                        </ControlTemplate>
-                                    </Setter.Value>
-                                </Setter>
-                                <Style.Triggers>
-                                    <Trigger Property="IsMouseOver" Value="True">
-                                        <Setter Property="Background"  Value="{StaticResource PlayButton_Hover}"/>
-                                    </Trigger>
-                                </Style.Triggers>
-                            </Style>
+                                        <Style x:Key="PlayButtonStyles" TargetType="{x:Type Button}">
+                                            <Setter Property="Width" Value="32"></Setter>
+                                            <Setter Property="Height" Value="32"></Setter>
+                                            <Setter Property="Background" Value="{StaticResource PlayButton}"/>
+                                            <Setter Property="Template">
+                                                <Setter.Value>
+                                                    <ControlTemplate TargetType="{x:Type Button}">
+                                                        <Border Background="{TemplateBinding Background}">
+                                                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                                        </Border>
+                                                    </ControlTemplate>
+                                                </Setter.Value>
+                                            </Setter>
+                                            <Style.Triggers>
+                                                <Trigger Property="IsMouseOver" Value="True">
+                                                    <Setter Property="Background"  Value="{StaticResource PlayButton_Hover}"/>
+                                                </Trigger>
+                                            </Style.Triggers>
+                                        </Style>
 
-                            <Style x:Key="StopButtonStyles" TargetType="{x:Type Button}">
-                                <Setter Property="Width" Value="32"></Setter>
-                                <Setter Property="Height" Value="32"></Setter>
-                                <Setter Property="Background" Value="{StaticResource StopButton}"/>
-                                <Setter Property="Template">
-                                    <Setter.Value>
-                                        <ControlTemplate TargetType="{x:Type Button}">
-                                            <Border Background="{TemplateBinding Background}">
-                                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                                            </Border>
-                                        </ControlTemplate>
-                                    </Setter.Value>
-                                </Setter>
-                                <Style.Triggers>
-                                    <Trigger Property="IsMouseOver" Value="True">
-                                        <Setter Property="Background"  Value="{StaticResource StopButton_Hover}"/>
-                                    </Trigger>
-                                </Style.Triggers>
-                            </Style>
+                                        <Style x:Key="StopButtonStyles" TargetType="{x:Type Button}">
+                                            <Setter Property="Width" Value="32"></Setter>
+                                            <Setter Property="Height" Value="32"></Setter>
+                                            <Setter Property="Background" Value="{StaticResource StopButton}"/>
+                                            <Setter Property="Template">
+                                                <Setter.Value>
+                                                    <ControlTemplate TargetType="{x:Type Button}">
+                                                        <Border Background="{TemplateBinding Background}">
+                                                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                                        </Border>
+                                                    </ControlTemplate>
+                                                </Setter.Value>
+                                            </Setter>
+                                            <Style.Triggers>
+                                                <Trigger Property="IsMouseOver" Value="True">
+                                                    <Setter Property="Background"  Value="{StaticResource StopButton_Hover}"/>
+                                                </Trigger>
+                                            </Style.Triggers>
+                                        </Style>
 
-                            <Style x:Key="ResetButtonStyles" TargetType="{x:Type Button}">
-                                <Setter Property="Width" Value="32"></Setter>
-                                <Setter Property="Height" Value="32"></Setter>
-                                <Setter Property="Background" Value="{StaticResource ResetButton}"/>
-                                <Setter Property="Template">
-                                    <Setter.Value>
-                                        <ControlTemplate TargetType="{x:Type Button}">
-                                            <Border Background="{TemplateBinding Background}">
-                                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                                            </Border>
-                                        </ControlTemplate>
-                                    </Setter.Value>
-                                </Setter>
-                                <Style.Triggers>
-                                    <Trigger Property="IsMouseOver" Value="True">
-                                        <Setter Property="Background"  Value="{StaticResource ResetButton_Hover}"/>
-                                    </Trigger>
-                                </Style.Triggers>
-                            </Style>
-                        </Grid.Resources>
+                                        <Style x:Key="ResetButtonStyles" TargetType="{x:Type Button}">
+                                            <Setter Property="Width" Value="32"></Setter>
+                                            <Setter Property="Height" Value="32"></Setter>
+                                            <Setter Property="Background" Value="{StaticResource ResetButton}"/>
+                                            <Setter Property="Template">
+                                                <Setter.Value>
+                                                    <ControlTemplate TargetType="{x:Type Button}">
+                                                        <Border Background="{TemplateBinding Background}">
+                                                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                                        </Border>
+                                                    </ControlTemplate>
+                                                </Setter.Value>
+                                            </Setter>
+                                            <Style.Triggers>
+                                                <Trigger Property="IsMouseOver" Value="True">
+                                                    <Setter Property="Background"  Value="{StaticResource ResetButton_Hover}"/>
+                                                </Trigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </Grid.Resources>
 
-                        <Button Grid.Column="0" Command="{Binding Start_Timer }" Style="{StaticResource PlayButtonStyles}"></Button>
-                        <Button Grid.Column="1" Command="{Binding Stop_Timer }" Style="{StaticResource StopButtonStyles}"></Button>
-                        <Button Grid.Column="2" Command="{Binding Reset_Timer }" Style="{StaticResource ResetButtonStyles}"></Button>
-                    </Grid>
-                </Border>
-                <Border Grid.Row="2" BorderBrush="Blue" BorderThickness="0.5" Margin="0 10 0 0">
-                    <Grid HorizontalAlignment="Center">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"></ColumnDefinition>
-                            <ColumnDefinition Width="*"></ColumnDefinition>
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto"></RowDefinition>
-                            <RowDefinition Height="Auto"></RowDefinition>
-                            <RowDefinition Height="Auto"></RowDefinition>
-                            <RowDefinition Height="Auto"></RowDefinition>
-                            <RowDefinition Height="Auto"></RowDefinition>
-                            <RowDefinition Height="Auto"></RowDefinition>
-                        </Grid.RowDefinitions>
+                                    <Button Grid.Column="0" Command="{Binding Start_Timer }" Style="{StaticResource PlayButtonStyles}"></Button>
+                                    <Button Grid.Column="1" Command="{Binding Stop_Timer }" Style="{StaticResource StopButtonStyles}"></Button>
+                                    <Button Grid.Column="2" Command="{Binding Reset_Timer }" Style="{StaticResource ResetButtonStyles}"></Button>
+                                </Grid>
+                            </Border>
+                            <Border Grid.Row="2" BorderBrush="Blue" BorderThickness="0.5" Margin="0 10 0 0">
+                                <Grid HorizontalAlignment="Center">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"></ColumnDefinition>
+                                        <ColumnDefinition Width="*"></ColumnDefinition>
+                                    </Grid.ColumnDefinitions>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto"></RowDefinition>
+                                        <RowDefinition Height="Auto"></RowDefinition>
+                                        <RowDefinition Height="Auto"></RowDefinition>
+                                        <RowDefinition Height="Auto"></RowDefinition>
+                                        <RowDefinition Height="Auto"></RowDefinition>
+                                        <RowDefinition Height="Auto"></RowDefinition>
+                                    </Grid.RowDefinitions>
 
-                        <Label HorizontalAlignment="Center" Grid.Row="0" Grid.Column="0">Date</Label>
-                        <DatePicker Grid.Row="1" Grid.Column="0" SelectedDate="{ Binding SelectedDate }" Width="Auto"></DatePicker>
+                                    <Label HorizontalAlignment="Center" Grid.Row="0" Grid.Column="0">Date</Label>
+                                    <DatePicker Grid.Row="1" Grid.Column="0" SelectedDate="{ Binding SelectedDate }" Width="Auto"></DatePicker>
 
-                        <Label HorizontalAlignment="Center" Grid.Row="0" Grid.Column="1">Time</Label>
-                        <!--<Controls:TimePicker Grid.Row="1" Grid.Column="1" SelectedTime="{Binding TimeElapsed }"></Controls:TimePicker>-->
-                        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding TimeElapsed}" Margin="10 0 0 0"></TextBox>
-                        
-                        <Label HorizontalAlignment="Center" Grid.Row="2" Grid.ColumnSpan="2" Margin="0 10 0 0">Message</Label>
-                        <TextBox Grid.Row="3" Grid.ColumnSpan="2" Text="{ Binding Message }"></TextBox>
+                                    <Label HorizontalAlignment="Center" Grid.Row="0" Grid.Column="1">Time</Label>
+                                    <!--<Controls:TimePicker Grid.Row="1" Grid.Column="1" SelectedTime="{Binding TimeElapsed }"></Controls:TimePicker>-->
+                                    <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding TimeElapsed}" Margin="10 0 0 0"></TextBox>
 
-                        <Button Grid.Row="4" Grid.Column="1" Content="Log Work" Width="Auto" Margin="0 10 0 0" Command="{ Binding LogWork}"></Button>
-                    </Grid>
-                </Border>
+                                    <Label HorizontalAlignment="Center" Grid.Row="2" Grid.ColumnSpan="2" Margin="0 10 0 0">Message</Label>
+                                    <TextBox Grid.Row="3" Grid.ColumnSpan="2" Text="{ Binding Message }"></TextBox>
+
+                                    <Button Grid.Row="4" Grid.Column="1" Content="Log Work" Width="Auto" Margin="0 10 0 0" Command="{ Binding LogWork}"></Button>
+                                </Grid>
+                            </Border>
+                        </Grid>
+                    </TabItem>
+                    <TabItem Header="All Work Logs">
+                        <Label>ASD</Label>
+                    </TabItem>
+                </TabControl>
             </Grid>
         </Grid>
     </Border>
